--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-together
-requests
-PyPDF2
-rich
-streamlit
+flask==3.0.0
+streamlit>=1.29.0
+python-dotenv>=1.0.0
+together>=0.2.5
+langchain>=0.1.0
+langchain-core>=0.1.8
+langgraph>=0.0.15
+beautifulsoup4==4.12.2
+selenium==4.16.0
+webdriver_manager==4.0.1
+requests>=2.31.0
+openai>=1.3.0
